Add chart file and show prototype
