# storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8000/",
+            "url": "http://localhost:8888",
             "description": "Default server"
         }
     ],
@@ -609,6 +609,24 @@
                     },
                     "422": {
                         "description": "Invalid input"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
+        "/api/users/registered_user_stats": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get registered user stats",
+                "description": "Get registered user stats",
+                "operationId": "registered-user-stats",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
                     },
                     "500": {
                         "description": "Server error"
